# mc-code

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SECURITY.md  install.sh  justfile  sonar-project.properties
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  pages.yml  pre-release.yml  release.yml  security.yml  sonarcloud.yml
docs/blog/: building-magic-code.md  social-media-posts.md
docs/site/: index.html
examples/: batch-review.sh  ci-fix.sh  config-selfhosted.toml  demo.sh  stream-events.sh
mc/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.sandbox  README.md  deny.toml  rust-toolchain.toml  tarpaulin-report.json
mc/.github/workflows/: ci.yml  release.yml
mc/Formula/: magic-code.rb
mc/crates/mc-cli/: Cargo.toml
mc/crates/mc-cli/src/: main.rs  provider.rs
mc/crates/mc-config/: Cargo.toml
mc/crates/mc-config/src/: lib.rs  loader.rs  project.rs  types.rs
mc/crates/mc-core/: Cargo.toml
mc/crates/mc-core/src/: agents.rs  auto_skill.rs  branch.rs  compact.rs  context_resolver.rs  cost.rs  cron.rs  debug.rs  fts.rs  lib.rs  memory.rs  model_registry.rs  parallel_tools.rs  repo_map.rs  retry.rs  runtime.rs  session.rs  skills.rs  subagent.rs  tasks.rs  token_budget.rs  tool_cache.rs  undo.rs  usage.rs
mc/crates/mc-core/tests/: integration.rs
mc/crates/mc-provider/: Cargo.toml
mc/crates/mc-provider/src/: anthropic.rs  error.rs  gemini.rs  generic.rs  lib.rs  sse.rs  types.rs
mc/crates/mc-provider/tests/: http_mock.rs
mc/crates/mc-tools/: Cargo.toml
mc/crates/mc-tools/src/: audit.rs  bash.rs  error.rs  file_ops.rs  hooks.rs  lib.rs  lsp.rs  mcp.rs  permissions.rs  plugin.rs  registry.rs  sandbox.rs  search.rs  spec.rs  web.rs
mc/crates/mc-tui/: Cargo.toml
mc/crates/mc-tui/src/: app.rs  commands.rs  highlight.rs  history.rs  input.rs  lib.rs  markdown.rs  ui.rs
mc/docs/: DESIGN_DOC_v1.md  architecture.md  demo.cast
mc/docs/adr/: 001-workspace-structure.md  002-async-streaming.md  003-permission-model.md
mc/docs/archive/: EXPANSION_PLAN.md
mc/docs/guides/: getting-started.md  memory.md
mc/docs/reference/: config.md  tools.md
mc/scripts/: demo.sh  sandbox.sh
tests/golden/: README.md  compare.py  run-platform.sh  run-session.sh  run.sh  verify.py
tests/golden/fixtures/: setup.sh
tests/golden/fixtures/go-webapp/: setup.sh
tests/golden/fixtures/python-desktop/: setup.sh
tests/golden/fixtures/python-webapp/: setup.sh
tests/golden/fixtures/react-mobile/: setup.sh
tests/golden/fixtures/react-webapp/: setup.sh
tests/golden/results/: REPORT-qwen3.5-27b.md  REPORT-qwen3.5-9b.md  cerebras-qwen3-235b-python-webapp-20260416-032753.jsonl  groq-llama-3.3-70b-python-webapp-20260416-031301.jsonl  llama-3.3-70b-versatile-python-webapp-20260416-024126.jsonl  qwen-qwen3-32b-python-webapp-20260416-024303.jsonl  vertex_ai-gemini-2.5-pro-go-webapp-20260415-213033.jsonl  vertex_ai-gemini-2.5-pro-python-desktop-20260415-213033.jsonl  vertex_ai-gemini-2.5-pro-python-webapp-20260415-213033.jsonl  vertex_ai-gemini-2.5-pro-python-webapp-20260416-025927.jsonl  vertex_ai-gemini-2.5-pro-python-webapp-20260416-033128.jsonl  vertex_ai-gemini-2.5-pro-react-mobile-20260415-213033.jsonl  vertex_ai-gemini-2.5-pro-react-webapp-20260415-213033.jsonl  vllm-qwen3.5-27b-go-webapp-20260416-060448.jsonl  vllm-qwen3.5-27b-go-webapp-20260416-093559.jsonl  vllm-qwen3.5-27b-python-desktop-20260416-060448.jsonl  vllm-qwen3.5-27b-python-desktop-20260416-093559.jsonl  vllm-qwen3.5-27b-python-webapp-20260416-060448.jsonl  vllm-qwen3.5-27b-python-webapp-20260416-093559.jsonl  vllm-qwen3.5-27b-react-mobile-20260416-060448.jsonl  vllm-qwen3.5-27b-react-mobile-20260416-093559.jsonl  vllm-qwen3.5-27b-react-webapp-20260416-060448.jsonl  vllm-qwen3.5-27b-react-webapp-20260416-093559.jsonl  vllm-qwen3.5-27b-session-debug-session-20260416-072104.jsonl  vllm-qwen3.5-27b-session-debug-session-20260416-104925.jsonl  vllm-qwen3.5-27b-session-go-webapp-quality-20260416-070543.jsonl  vllm-qwen3.5-27b-session-go-webapp-quality-20260416-103555.jsonl  vllm-qwen3.5-27b-session-plan-then-execute-20260416-072232.jsonl  vllm-qwen3.5-27b-session-plan-then-execute-20260416-105219.jsonl  vllm-qwen3.5-27b-session-python-desktop-feature-20260416-071255.jsonl  vllm-qwen3.5-27b-session-python-desktop-feature-20260416-104310.jsonl  vllm-qwen3.5-27b-session-python-webapp-feature-20260416-064834.jsonl  vllm-qwen3.5-27b-session-python-webapp-feature-20260416-101707.jsonl  vllm-qwen3.5-27b-session-python-webapp-refactor-20260416-064834.jsonl  vllm-qwen3.5-27b-session-python-webapp-refactor-20260416-101707.jsonl  vllm-qwen3.5-27b-session-react-webapp-feature-20260416-064834.jsonl  vllm-qwen3.5-27b-session-react-webapp-feature-20260416-101707.jsonl  vllm-qwen3.5-9b-20260415-202157.jsonl  vllm-qwen3.5-9b-20260415-202751.jsonl  vllm-qwen3.5-9b-20260415-202810.jsonl  (+38 more)
tests/golden/scenarios/: platform-scenarios.json  scenarios.json  session-scenarios.json
