[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "1.3.0"
edition = "2021"
license = "MIT"
publish = false
rust-version = "1.75"
repository = "https://github.com/kienbui1995/mc-code"
description = "Open-source TUI agentic AI coding agent"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
format_push_string = "allow"

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
futures-core = "0.3"
tokio-util = "0.7"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = "5"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"

[profile.release]
lto = true
strip = true
codegen-units = 1