[package]
name = "magic-code"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
description.workspace = true
repository.workspace = true
keywords = ["ai", "coding", "tui", "agent", "llm"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "magic-code"
path = "src/main.rs"

[dependencies]
mc-tui = { path = "../mc-tui" }
mc-core = { path = "../mc-core" }
mc-provider = { path = "../mc-provider" }
mc-tools = { path = "../mc-tools" }
mc-config = { path = "../mc-config" }
anyhow.workspace = true
clap.workspace = true
clap_complete = "4"
crossterm.workspace = true
ratatui.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
