[package]
name = "magic-code"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
description.workspace = true
repository.workspace = true
keywords = ["ai", "coding", "tui", "agent", "llm"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "magic-code"
path = "src/main.rs"

[dependencies]
mc-tui = { path = "../mc-tui", version = "1.7.0" }
mc-core = { path = "../mc-core", version = "1.7.0" }
mc-provider = { path = "../mc-provider", version = "1.7.0" }
mc-tools = { path = "../mc-tools", version = "1.7.0" }
mc-config = { path = "../mc-config", version = "1.7.0" }
anyhow.workspace = true
arboard = "3"
clap.workspace = true
clap_complete = "4"
crossterm.workspace = true
reqwest.workspace = true
ratatui.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
