[package]
name = "mc-config"
description = "Configuration loader for magic-code AI coding agent"
repository = "https://github.com/kienbui1995/mc-code"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[lints]
workspace = true
