[package]
name = "mc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
mc-provider = { path = "../mc-provider", version = "1.7.0" }
mc-tools = { path = "../mc-tools", version = "1.7.0" }
mc-config = { path = "../mc-config", version = "1.7.0" }
base64 = "0.22"
futures-core.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"

[lints]
workspace = true

[dev-dependencies]
async-stream.workspace = true
mc-tools = { path = "../mc-tools", version = "1.7.0" }
