[package]
name = "mc-provider"
description = "LLM provider implementations for magic-code (Anthropic, OpenAI, Gemini)"
repository = "https://github.com/kienbui1995/mc-code"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-stream.workspace = true
futures-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
