[package]
name = "mc-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
glob = "0.3"
regex = "1"
similar = "2"
walkdir = "2"

[lints]
workspace = true
