[package]
name = "mc-tools"
description = "Tool system for magic-code AI coding agent (30 built-in tools)"
repository = "https://github.com/kienbui1995/mc-code"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
glob = "0.3"
regex = "1"
similar = "3"
walkdir = "2"

[lints]
workspace = true
