[package]
name = "mc-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
mc-core = { path = "../mc-core" }
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
syntect.workspace = true
tokio-util.workspace = true
unicode-width.workspace = true

[lints]
workspace = true
