[package]
name = "mc-tui"
description = "Terminal UI for magic-code AI coding agent (ratatui-based)"
repository = "https://github.com/kienbui1995/mc-code"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
syntect.workspace = true
tokio-util.workspace = true
unicode-width.workspace = true

[lints]
workspace = true
